SERVER-13041 remove some slow leftover ixscan junk from fast count stage